banner height fixes to prevent reload flicker

--- a/_includes/assets/css/styles.css
+++ b/_includes/assets/css/styles.css
@@ -109,10 +109,8 @@ body.scrolled header nav .navbar-toggler + .navbar-collapse {background:none; ba
 
 
 /* Banner */
-#banner {position:relative; height:50px; margin-bottom:6px;}
-#banner .banner-overlay1 {position:absolute; z-index:1; bottom:8px; width:100%; height:40px; background:url(/_includes/assets/img/bg-banner-overlay1.png) no-repeat top center; background-size:100% 40px;}
-#banner .banner-overlay2 {position:absolute; z-index:3; bottom:-7px; width:100%; height:30px; background:url(/_includes/assets/img/bg-banner-overlay2.png) no-repeat top center; background-size:100% 30px;}
-#banner .slider {position:relative; top:2px; z-index:2;}
+#banner {position:relative; /*height:50px;*/ /*margin-bottom:6px;*/}
+#banner .slider {position:relative; /*top:2px;*/ z-index:2;}
 #banner .slider img {width:100%;}
 #banner .slider #prev,
 #banner .slider #next {
@@ -171,8 +169,8 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 
 
 /* Home */
-#page-home #banner {height:auto; max-height:407px; overflow:hidden;}
-#page-home #banner .cycle-slideshow {margin:0;}
+#page-home #banner {height:auto;}
+#page-home #banner .cycle-slideshow {overflow:hidden; margin:0;}
 #page-home #banner .cycle-overlay {width:300px; padding:20px 40px; position:absolute; top:40%; left:100px; bottom:auto; opacity:1; border-radius:4px; color:#FFF; background:#BB312B; box-shadow:inset 0 0 85px 0 rgba(0, 0, 0, 0.45);}
 
 #page-home #content .text1,
@@ -231,6 +229,7 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 	#page-home #banner {margin-bottom:0;}
 	#page-home #banner .banner-overlay2 {bottom:-3px;}
 
+	#page-home #banner .cycle-slideshow {height:187px;}
 	#page-home #banner .slider #prev,
 	#page-home #banner .slider #next {top:50%;}
 }
@@ -238,7 +237,12 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 
 /* Medium (md) and up */
 @media (min-width:768px) {
+	#banner .banner-overlay1 {position:absolute; z-index:1; bottom:8px; width:100%; height:40px; background:url(/_includes/assets/img/bg-banner-overlay1.png) no-repeat top center; background-size:100% 40px;}
+	#banner .banner-overlay2 {position:absolute; z-index:3; bottom:-7px; width:100%; height:30px; background:url(/_includes/assets/img/bg-banner-overlay2.png) no-repeat top center; background-size:100% 30px;}
+
 	#content {padding:30px 0 50px 0;}
+
+	#page-home #banner .cycle-slideshow {height:253px;}
 }
 
 
@@ -251,6 +255,8 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 	footer #footer-top .form {margin-top:-10px;}
 
 	.sidebar {border-left:1px solid #dee2e6;}
+
+	#page-home #banner .cycle-slideshow {height:341px;}
 }
 
 
@@ -262,6 +268,7 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 	header .call-block span {font-size:27px;}
 	header .call-block .text-white {letter-spacing:1px;}
 
+	#page-home #banner .cycle-slideshow {height:407px;}
 	#page-home #banner .slider #prev {left:-50px;}
 	#page-home #banner .slider #next {right:-50px;}
 }
